--- a/package.json
+++ b/package.json
@@ -9,20 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "browserify": "^13.0.0",
     "cli-color": "^1.1.0",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-cssmin": "^0.1.7",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.3",
-    "jquery": "^2.2.1",
-    "moment": "^2.12.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "gulp-uglify": "^1.5.3"
   }
 }
