--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,9 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "leaflet": "^0.7.7",
+    "font-awesome": "^4.5.0",
     "jquery": "^2.2.1",
+    "leaflet": "^0.7.7",
     "moment": "^2.12.0",
     "parse": "^1.7.1"
   }
